# smartreply-clone

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  SETUP.md  chat_test.py  comments.db  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  test.py
.github/: README.md
.github/workflows/: ci-cd.yml  ci.yml  security.yml
core/: config.py  prompts.py
models/: database.py  webhook_models.py
services/: comment_moderator.py  database_service.py  google_sheets_service.py  intent_analyzer.py  messenger_service.py  meta_api_client.py  webhook_processor.py
utils/: logger.py
